--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <h1>Detect Complex Financial<br><span class="text-gradient">Fraud Instantly</span></h1>
             <p>AI-powered graph algorithms that uncover hidden money-laundering patterns, detect suspicious transaction networks, and protect sensitive financial data with zero server exposure.</p>
             <div class="hero-buttons">
-                <a href="https://moneymuling-eight.vercel.app/" class="btn btn-primary" target="_blank">Start Investigation App</a>
+                <a href="https://moneymuling-six.vercel.app/" class="btn btn-primary" target="_blank">Start Investigation App</a>
                 <a href="#github-repo" class="btn btn-secondary">View Source Code</a>
             </div>
         </div>
@@ -464,4 +464,5 @@
         });
     </script>
 </body>
+
 </html>
