--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <p>AI-powered graph algorithms that uncover hidden money-laundering patterns, detect suspicious transaction networks, and protect sensitive financial data with zero server exposure.</p>
             <div class="hero-buttons">
                 <a href="https://moneymuling-six.vercel.app/" class="btn btn-primary" target="_blank">Start Investigation App</a>
-                <a href="#github-repo" class="btn btn-secondary">View Source Code</a>
+                <a href="Webpage/source.html" class="btn btn-secondary">View Source Code</a>
             </div>
         </div>
         
@@ -466,3 +466,4 @@
 </body>
 
 </html>
+
