--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <li><a href="#overview">Overview</a></li>
             <li><a href="#capabilities">Capabilities</a></li>
             <li><a href="#tech-stack">Tech Stack</a></li>
-            <li><a href="#team">Our Team</a></li> </ul>
+            <li><a href="Webpage/team.html">Our Team</a></li> </ul>
     </nav>
 
     <section class="hero" id="overview">
@@ -466,4 +466,5 @@
 </body>
 
 </html>
+
 
