Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
             <span class="bar"></span>
         </button>
         <ul class="nav-links" id="nav-links">
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#capabilities">Capabilities</a></li>
+            <li><a href="#capabilities">Capabilities<a></li>
             <li><a href="#tech-stack">Tech Stack</a></li>
-            <li><a href="Webpage/team.html">Our Team</a></li> </ul>
+            <li><a href="Webpage/team.html">Our Team</a></li> 
+            <li><a href="Webpage/RIFT 2026.html">RIFT 2026 </a></li>
+            </ul>
     </nav>
 
     <section class="hero" id="overview">
@@ -466,5 +467,6 @@
 </body>
 
 </html>
+
 
 
