--- a/Webpage/RIFT 2026.html
+++ b/Webpage/RIFT 2026.html
@@ -212,13 +212,13 @@
 
     <nav>
         <div class="logo">RIFT<span>2026</span></div>
-        <ul class="nav-links">
+        <!-- <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#tracks">The Tracks</a></li>
             <li><a href="#rules">Rules</a></li>
             <li><a href="#timeline">Timeline</a></li>
             <li><a href="#prizes">Prizes</a></li>
-        </ul>
+        </ul> -->
     </nav>
 
     <header class="hero">
@@ -512,4 +512,5 @@
         });
     </script>
 </body>
+
 </html>
