--- a/Webpage/RIFT 2026.html
+++ b/Webpage/RIFT 2026.html
@@ -423,7 +423,7 @@
     <footer>
         <div class="footer-cta animate-on-scroll">
             <h2>Ready to view our submission?</h2>
-            <a href="#" class="btn btn-primary">Launch Project App</a>
+            <a href="index.html" class="btn btn-primary">Launch Project App</a>
         </div>
         <div class="footer-bottom">
             &copy; 2026 RIFT Hackathon Organizing Team. All code submitted must be open source.
@@ -514,3 +514,4 @@
 </body>
 
 </html>
+
