--- a/Webpage/team.html
+++ b/Webpage/team.html
@@ -140,12 +140,12 @@
         
         <div class="section-header animate-on-scroll">
             <h1>Meet <span class="text-gradient">The Innovators</span></h1>
-            <p>Four developers, 48 hours, and one shared goal: to build a scalable, zero-knowledge financial forensics engine.</p>
+            <p>Four developers, 12 hours, and one shared goal: to build a scalable, zero-knowledge financial forensics engine.</p>
         </div>
 
         <div class="glass mission-box animate-on-scroll">
             <h3>"We noticed that traditional AML software relies on outdated SQL tables, exposing massive data leaks and missing cyclical fraud. We built SecureNet to process everything locally in the browser using graph algorithms, ensuring complete privacy and unmatched detection speed."</h3>
-            <div class="mission-author">— The Team Vision</div>
+            <div class="mission-author">— THE INNOVATORS</div>
         </div>
 
         <div class="team-grid">
@@ -303,5 +303,6 @@
     </script>
 </body>
 </html>
+
 
 
